[project]
name = "ice-cream-dataops-1"
version = "0.1.0"
description = ""
authors = [
    {name = "“KhaledShaheenDataEng”",email = "“khaled.shaheen@cognite.com”"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cognite-toolkit (==0.3.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
